--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Abdullokh Khamzaev",
   "private": true,
   "scripts": {
+    "build": "quasar build",
+    "deploy": "vercel",
     "lint": "eslint --ext .js,.vue ./",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0"
