--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "A Quasar Project",
   "productName": "Quasar App",
-  "author": "Fayzullayev Amirjon <amir@yandex.ru>",
+  "author": "Abdullokh Khamzaev",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
